--- a/custom/mabany_market_plan/views/views.xml
+++ b/custom/mabany_market_plan/views/views.xml
@@ -1,5 +1,20 @@
 <odoo>
     <data>
+
+        <!-- Inherit Form View to Modify it -->
+        <record id="visit_registration_card_market_plan" model="ir.ui.view">
+            <field name="name">visit.registration.card.market.plan</field>
+            <field name="model">visit.registration.card</field>
+            <field name="inherit_id" ref="mabany_crm_customization.visit_registration_card_form"/>
+            <field name="arch" type="xml">
+
+                <xpath expr="//field[@name='campaign_id']" position="replace">
+                    <field name="market_plan_id"/>
+                </xpath>
+
+            </field>
+        </record>
+
         <record id="crm_stage_tree_unqualified" model="ir.ui.view">
             <field name="name">crm.stage.tree.unqualified</field>
             <field name="model">crm.stage</field>
@@ -21,6 +36,19 @@
 
                 <xpath expr="//field[@name='is_won']" position="after">
                     <field name="is_unqualified"/>
+                </xpath>
+
+            </field>
+        </record>
+
+        <record id="crm_lead_market_plan_tree" model="ir.ui.view">
+            <field name="name">crm.lead.market.plan.tree</field>
+            <field name="model">crm.lead</field>
+            <field name="inherit_id" ref="crm.crm_case_tree_view_oppor"/>
+            <field name="arch" type="xml">
+
+                <xpath expr="//field[@name='phone']" position="after">
+                   <field name="market_plan_id"/>
                 </xpath>
 
             </field>
