--- a/custom/mabany_real_estate/views/res_reservation.xml
+++ b/custom/mabany_real_estate/views/res_reservation.xml
@@ -218,11 +218,11 @@
 
                         <notebook>
                             <page name="payment" string="Payment">
-                                <label for="is_select_all_print"/>
+                                <!--                                <label for="is_select_all_print"/>-->
 
-                                <field name="is_select_all_print" attrs="{'readonly': [('eng_manage', '=',True)]}"/>
-                                <br/>
-                                <field name="is_select_all" attrs="{'readonly': [('eng_manage', '=',True)]}"/>
+                                <!--                                <field name="is_select_all_print" attrs="{'readonly': [('eng_manage', '=',True)]}"/>-->
+                                <!--                                <br/>-->
+                                <!--                                <field name="is_select_all" attrs="{'readonly': [('eng_manage', '=',True)]}"/>-->
 
                                 <group>
                                     <table class="table table-bordered" width="90%"
@@ -436,14 +436,16 @@
                                 </group>
 
                             </page>
-                            <!--                            <page string="Notes">-->
-                            <!--                                <group>-->
-                            <!--                                    <field name="notes_cash" attrs="{'readonly': [('eng_manage', '=',True)]}"/>-->
-                            <!--                                    <field name="notes_visa" attrs="{'readonly': [('eng_manage', '=',True)]}"/>-->
-                            <!--                                    <field name="notes_cheque" attrs="{'readonly': [('eng_manage', '=',True)]}"/>-->
-                            <!--                                    <field name="notes_bank" attrs="{'readonly': [('eng_manage', '=',True)]}"/>-->
-                            <!--                                </group>-->
-                            <!--                            </page>-->
+                            <page string="Log">
+                                <field name="res_log">
+                                    <tree delete="0" create="0" edit="0">
+                                        <field name="user_id"/>
+                                        <field name="time"/>
+                                        <field name="state"/>
+                                        <field name="res_id" invisible="1"/>
+                                    </tree>
+                                </field>
+                            </page>
                             <page string="Cancel Reasons" attrs="{'invisible' : [('state', 'not in',['blocked'] )]}">
                                 <group>
                                     <field name="reason" attrs="{'readonly': [('eng_manage', '=',True)]}"/>
