--- a/custom/mabany_real_estate/views/crm.xml
+++ b/custom/mabany_real_estate/views/crm.xml
@@ -13,6 +13,22 @@
                             class="oe_highlight"
                     />
                 </xpath>
+                <xpath expr="//button[@name='action_view_sale_quotation']" position="replace">
+                    <button name="action_open_leads" type="object"
+                            class="oe_stat_button" icon="fa-star"
+                            attrs="{'invisible': [('type', '=', 'lead')]}">
+                        <div class="o_stat_info">
+                            <field name="count_reservation" class="o_stat_value"/>
+                            <span class="o_stat_text" attrs="{'invisible': [('count_reservation', '&lt;', 2)]}">
+                                Reservations
+                            </span>
+                            <span class="o_stat_text" attrs="{'invisible': [('count_reservation', '&gt;', 1)]}">
+                                Reservation
+                            </span>
+                        </div>
+                    </button>
+
+                </xpath>
             </field>
         </record>
 
